@@ -23,6 +23,8 @@ Broker:
 - Disable TLS renegotiation. Client initiated renegotiation is considered to
   be a potential attack vector against servers. Closes #1257.
 - Fix incorrect shared subscription topic '$shared'.
+- Fix zero length client ids being rejected for MQTT v5 clients with clean
+  start set to true.
 
 Client library:
 - Fix typo causing build error on Windows when building without TLS support.
